--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
 
 html, body {                      /* geldt voor html en body */
   margin: 0px;                    /* standaard marge 0 */
-  background-color: #EEEEEE;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
+  background-color: #fffbb9;    /* achtergrondkleur lichtgrijs */
+  color: #000000;               /* tekstkleur donkergrijs */
 }  
 
 body * {                          /* geldt voor alles in body */
-  overflow: hidden;               /* zorgt dat DIV en andere block elementen de hoogte krijgt van wat erin zit (anders is het soms 0) */
+  overflow:hidden;                /* zorgt dat DIV en andere block elementen de hoogte krijgt van wat erin zit (anders is het soms 0) */
   box-sizing: border-box;         /* zorg dat border meetelt bij de width en height van boxen */
   margin: 0px;                    /* standaard marge 0 */
 }
@@ -44,15 +44,17 @@ p {
 }
 
 /* Indeling voor hoofd pagina */
-
+.rij {
+  
+}
 .kolomLinks {
   float:left;
-  width:250px;
+  width:350px;
   padding-right:15px;           /* afstand tussen plaatje en rechterkolom */
 }
 .kolomRechts {
-  float:left;
-  width: 450px;
+  float:right;
+  width: 250px;
 }
 .kolomStop {
   clear:both;                   /* stop met floaten */
@@ -84,7 +86,7 @@ nav ul {
     list-style-type: none;
     margin: auto;
     padding: 0;
-    background-color: #dddddd;
+    background-color: #006d8f;
     overflow: hidden;
 }
 
@@ -94,16 +96,16 @@ nav ul li {
 
 nav li a {
     display: block;
-    color: white;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 nav li a:hover {
-    background-color: #aaaaaa;
+    background-color: #00c7fc;
 }
 
 nav li a.active {
-    background-color: skyblue;
+    background-color: #00c7fc;
 }
